--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,11 @@ dependencies:
   get_it: 7.2.0
   injectable_generator: 1.5.0
   build_runner: 2.1.5
+  dotenv: 3.0.0
 
 dev_dependencies:
   lints: ^1.0.0
   test: ^1.16.0
+
+assets:
+  .env
